Set z-index to dropdown to avoid dropdown left behind because of relative poitioning.

--- a/sass/component/_dropdown.scss
+++ b/sass/component/_dropdown.scss
@@ -1,5 +1,6 @@
 .__dropdown {
 	position: relative;
+	z-index: 5;
 	@include inline-block();
 
 	&.push-left {
